# pto-isa

./: .gitignore  INSTALLATION_SUMMARY.md  README.md  README_CLAUDE_MEM.md  WINDOWS_SETUP_REPORT.md  arm64_codegen.py  compiler.py  config_example.py  example_arm64_sinh.c  example_arm64_sinh_nofusion.c  example_pto_sinh.c  loop_fusion.py  pto_c_compiler.py  pto_compile.py  pto_dynamic_tiling.py  pto_isa_definition.py  pto_isa_sinh.py  pto_runtime.c  pto_runtime.h  push-to-github.bat  requirements.txt  sinh_arm64_fused.c  sinh_arm64_nofusion.c  sinh_pto_as.txt  softmax_runtime_dump.txt  test_runtime_dump.c  update.md  visualize_taskgraph.py
docs/: aicpu_scheduler_visualization.html  claude-mem-installation-guide.md  git-push-instructions.md  network_fix_complete_guide.md  network_fix_quick_reference.md  network_fix_report.md  runtime_buffer_manager_methods.md  skills_installation_guide.md  tensormap_design.md  vercel_skills_usage_guide.md  实施计划_2026-02-14.md
docs/chipstack/: index.html
docs/presentations/: 01_两阶段优化技术报告.md  02_两阶段优化算法说明.md  03_两阶段优化实施指南.md  two_phase_optimization_architecture_report.html  two_phase_optimization_demo.html  two_phase_optimization_demo_v2.html  two_phase_optimization_presentation.html
docs/research_analysis/: 01_architecture_overview.md  02_scheduling_algorithms.md  03_execution_flow_and_examples.md  04_architecture_diagrams.md  README.md  zh-cn_01_架构概览.md  zh-cn_02_调度算法.md  zh-cn_03_执行流程与示例.md  zh-cn_04_调度优化方案研究.md  zh-cn_05_两阶段依赖解析优化方案.md  zh-cn_README.md  调度优化资源清单.md
docs/skills/: algo-viz.md
examples/: pto_aten_ir_primitives.py  pto_fused_softmax.py  pto_isa_sinh.py  pto_llama7B_dynamic.py  pto_torch_flexattention.py  pto_torch_functional.py  pto_torch_nn_operators.py  pto_torch_tensor.py  test_llama_performance  test_llama_performance.c  test_runtime_entry  test_runtime_entry.c
examples/bgemm/: pto_bgemm_func.py  run_ascend_a2a3.py
examples/llama/: config.json  pto_llama7B_dynamic.py  run_arm64.py  run_ascend.py  run_ascend_a2a3_sim.py  run_ascend_a5.py  run_cuda.py
examples/softmax/: pto_fused_softmax.py  run_arm64.py  run_ascend.py  run_ascend_a2a3_sim.py  run_ascend_a5.py  run_cuda.py
ref_runtime/python/: bindings.py  pto_compiler.py
runtime/: CMakeLists.txt  RUNTIME_COMPILATION.md
runtime/aicore/: CMakeLists.txt  kernel.cpp
runtime/aicpu/: CMakeLists.txt
runtime/example/: CMakeLists.txt
runtime/example/basic/: CMakeLists.txt  graphbuilder.cpp
runtime/example/basic_python/: CMakeLists.txt  README.md  graphbuilder.py  run.sh
runtime/graph/: README.md  graph.cpp  graph.h
runtime/host/: devicerunner.cpp  devicerunner.h  kernel_compiler.cpp  kernel_compiler.h
runtime/python/: CMakeLists.txt  README.md  bindings.cpp
src/: __init__.py
src/compile/: __init__.py  pto_compile.py  (+6 more)
(+712 files in other folders)
